fixed align icons for RTL

--- a/assets/css/editor.css
+++ b/assets/css/editor.css
@@ -1267,6 +1267,10 @@ select {
       padding: 0 2px;
       text-transform: uppercase;
       font-size: 9px; }
+  .elementor-control-start-end .eicon-h-align-left, .elementor-control-start-end .eicon-h-align-right {
+    -webkit-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+            transform: rotate(180deg); }
   .elementor-panel .elementor-control-responsive-switchers {
     display: -webkit-box;
     display: -webkit-flex;
